[tool.poetry]
name = "flask-parameter-validator"
version = "0.1.0"
description = ""
authors = ["ooknimm <ooknimm@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_parameter_validator"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
pydantic = "^2.0.2"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
dirty-equals = "^0.7.1.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
